<resources>
    <string name="app_name">Login</string>
    <string name="remember_password">Remember Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="policy">By Signing in you are agreeing to our Terms and privacy policy</string>
    <string name="logs">Login</string>
    <string name="or">or Register</string>
    <string name="log2">or login with</string>
    <string name="googlelink">TODO</string>
    <string name="facebooklink">facebook</string>
    <string name="reset_password">Reset password</string>
    <string name="error_empty_fields">Please fill out all fields.</string>
    <string name="error_accept_terms">Please accept the terms to proceed.</string>
    <string name="login_successful">Login Successful!</string>
</resources>